# tree-sitter-basic

./: .gitattributes  .gitignore  Cargo.toml  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/tree_sitter/tree-sitter-basic.h/: tree-sitter-c.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_basic/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBasicTests/: TreeSitterCTests.swift
examples/: factorial.bas  guess.bas  subroutine.bas
src/: grammar.json  node-types.json
test/corpus/: control_flow.txt  loops.txt  statements.txt
