[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-basic"
version = "0.1.0"
description = "BASIC grammar for tree-sitter"
readme = "README.md"
authors = [
    {name = "Raffaele", email = "raffaelemeo77@gmail.com"}
]
license = {text = "MIT"}
keywords = ["tree-sitter", "parser", "basic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/tree-sitter-basic"
Repository = "https://github.com/yourusername/tree-sitter-basic"
